# CMake_How_and_Why

./: README.md
NoCMake/: README.md  auto_build.sh  auto_build_shared.sh  auto_build_static.sh  hello.cpp  hello_cmake.cpp  hello_world.cpp  hello_world.h  main.cpp  world.cpp
YesCMake/: CMakeLists.txt
YesCMake/hello_world/: CMakeLists.txt  hello_world.cpp  hello_world.h
YesCMake/hello_world/hello/: CMakeLists.txt  hello.cpp
YesCMake/hello_world/world/: CMakeLists.txt  world.cpp
